# Benchmark-Models-PEtab

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  README.txt  experimentalCondition_Blum-Mikelson_MolSystBiol2019.tsv  model_Blum-Mikelson_MolSystBiol2019.sbml  parameters_Blum-Mikelson_MolSystBiol2019.tsv  pull_request_template.md  v1_v2.py
.github/: CODEOWNERS  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: new_petab_problem.md  pull_request_template.md
.github/workflows/: deploy.yml  gh-pages.yml  python.yml  simulate.yml  tests.yml
Benchmark-Models/: checkBenchmarkModels.py  model_info.py
Benchmark-Models/Alkan_SciSignal2018/: Alkan_SciSignal2018.yaml  experimentalCondition_Alkan_SciSignal2018.tsv  measurementData_Alkan_SciSignal2018.tsv  model_Alkan_SciSignal2018.xml  observables_Alkan_SciSignal2018.tsv  parameters_Alkan_SciSignal2018.tsv  simulatedData_Alkan_SciSignal2018.tsv  visualizationSpecification_Alkan_SciSignal2018.tsv
Benchmark-Models/Armistead_CellDeathDis2024/: Armistead_CellDeathDis2024.yaml  Sphingolipid_rheostat_Cer_activation.xml  Sphingolipid_rheostat_Cer_activation.yaml  Sphingolipid_rheostat_measurement_data.tsv  experimentalConditions_Armistead_CellDeathDis2024.tsv  measurementData_Armistead_CellDeathDis2024.tsv  model_Armistead_CellDeathDis2024.xml  observables_Armistead_CellDeathDis2024.tsv  parameters_Armistead_CellDeathDis2024.tsv  simulatedData_Armistead_CellDeathDis2024.tsv  simulationData_Armistead_CellDeathDis2024.tsv  visualizationSpecification_Armistead_CellDeathDis2024.tsv
Benchmark-Models/Bachmann_MSB2011/: experimentalCondition_Bachmann_MSB2011.tsv  model_Bachmann_MSB2011.xml  parameters_Bachmann_MSB2011.tsv  simulatedData_Bachmann_MSB2011.tsv
Benchmark-Models/Becker_Science2010/: Becker_Science2010.yaml  experimentalCondition_Becker_Science2010__BaF3_Exp.tsv  experimentalCondition_Becker_Science2010__binding.tsv  measurementData_Becker_Science2010__BaF3_Exp.tsv  measurementData_Becker_Science2010__binding.tsv  model_Becker_Science2010__BaF3_Exp.xml  model_Becker_Science2010__binding.xml  parameters_Becker_Science2010.tsv  simulationData_Becker_Science2010__BaF3_Exp.tsv  simulationData_Becker_Science2010__binding.tsv
Benchmark-Models/Beer_MolBioSystems2014/: Beer_MolBioSystems2014.yaml  experimentalCondition_Beer_MolBioSystems2014.tsv  measurementData_Beer_MolBioSystems2014.tsv  model_Beer_MolBioSystems2014.xml  simulatedData_Beer_MolBioSystems2014.tsv  visualizationSpecification_Beer_MolBioSystems2014.tsv
Benchmark-Models/Bertozzi_PNAS2020/: Bertozzi_PNAS2020.yaml  Bertozzi_PNAS2020_notes_on_model.txt  _notes.md  conditions.tsv  (+14 more)
FGF model A1/: Blum-Mikelson_MolSystBiol2019.yaml  README.txt
scripts/: _helpers.py  check_petablint.py  check_sbml_metadata.py  model_info.py  overview.py  requirements.txt
src/: benchmark_refs.bib
src/python/: .pre-commit-config.yaml  MANIFEST.in  build.sh  build_site.py  pyproject.toml  setup.cfg  setup.py  simulate.py
src/python/benchmark_models_petab/: Benchmark-Models  C.py  __init__.py  base.py  check_petablint.py  check_sbml_metadata.py  overview.py  version.py
src/python/test/: test_base.py
vis/: generate_petab_reports.py
(+626 files in other folders)
