# Benchmark-Models-PEtab python package."""

[metadata]
name = benchmark_models_petab
version = attr: benchmark_models_petab.version.__version__
description = "A collection of models with experimental data in the PEtab format"
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/Benchmarking-Initiative/Benchmark-Models-PEtab"

author = "The Benchmark-Models-PEtab maintainers"
author_email = "yannik.schaelte@gmail.com"

license = BSD-3-Clause
license_file = LICENSE

[options]
install_requires =
    petab >= 0.4.0

python_requires = >= 3.10
zip_safe = False
include_package_data = True

packages = find:

[flake8]
per-file-ignores =
    */__init__.py:F401
